# NanaBot

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  main.py  pyproject.toml  requirements.txt
data/: config.json  config.yml
plugins/: __init__.py  basic.py  chat_deepseek.py  handle_rules.py  ping.py  security.py  steam_bind_extend.py
services/: __init__.py  auth.py  bot_profile.py  chat_memory.py  command_registry.py  config_store.py  database.py  deepseek_client.py  rate_limit.py  whitelist_store.py
