[project]
name = "nanabot"
version = "0.1.0"
description = "娜娜 Bot 是一个基于 NapCatQQ、NoneBot2 和 OneBot V11 的 QQ 机器人，允许 QQ 用户在私聊、群聊中与其互动"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "nonebot2[fastapi]<3.0.0,>=2.4.3",
    "nonebot-adapter-onebot<3.0.0,>=2.4.6",
    "nonebot_plugin_handle>=0.4.4",
    "nonebot-plugin-whateat-pic>=1.5.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.nonebot.plugins]
nonebot_plugin_handle = ["nonebot_plugin_handle"]
nonebot-plugin-whateat-pic = ["nonebot_plugin_whateat_pic"]
